@@ -130,7 +130,7 @@
 		  <child>
 		    <widget class="GtkRadioButton" id="manual_radiobutton">
 		      <property name="visible">True</property>
-		      <property name="tooltip" translatable="yes">You will have to import your music manually. This is for experienced users only and therefor not generally recommended.</property>
+		      <property name="tooltip" translatable="yes">You will have to import your music manually. This is for experienced users only and therefore not generally recommended.</property>
 		      <property name="label" translatable="yes">_Nothing, I will manage my music myself</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
