@@ -1,5 +1,15 @@
 2004-02-26  Jorn Baayen  <jbaayen@gnome.org>
 
+	* data/glade/NoMusicFoundWindow.glade:
+
+	Therefor -> Therefore
+
+	* src/PlaylistWindow.cs:
+
+	Use GetPluralString where needed.
+
+2004-02-26  Jorn Baayen  <jbaayen@gnome.org>
+
 	* configure.in:
 
 	Bump version number to 0.4.0.99, bump Gtk# requirement to 0.17.
